<resources>
    <string name="app_name">Mineral Em Casa</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Registration</string>
    <string name="title_activity_new_product">New Product</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_city">City</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm the password</string>
    <string name="prompt_order_quantity">Quantity</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Registration</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_create">Create</string>
    <string name="action_mark_delivered">Delivered</string>
    <string name="action_order">Order</string>
    <string name="action_sign_out">Sign out</string>
    <string name="invalid_name">Please provide your full name</string>
    <string name="invalid_address">Please provide your full address</string>
    <string name="invalid_city">Please provide your city</string>
    <string name="invalid_username">Invalid mail</string>
    <string name="invalid_password">Tha password should have more than 6 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_failed">Registration failed</string>
    <string name="new_product_failed">We could not generate the product</string>
    <string name="new_product_success">Product generated</string>
    <string name="new_product_button">New product</string>
    <string name="view_orders_button">View Orders</string>

    <string name="prompt_prod_name">Name</string>
    <string name="prompt_prod_description">Description</string>
    <string name="prompt_prod_size">Size</string>
    <string name="prompt_prod_price">Price</string>
    <string name="prompt_prod_stock">Stock</string>

    <string name="invalid_prod_name">Please specify the product name</string>
    <string name="invalid_prod_description">Put a description, please</string>
    <string name="invalid_prod_size">Please specify a size like \'400ml\' or \'20l\'</string>
    <string name="invalid_prod_price">The price is mandatory</string>
    <string name="invalid_prod_stock">The stock has to be positive</string>

    <string name="new_order_success">Order sent!</string>
    <string name="new_order_failed">Failed to create the order</string>
    <string name="new_order_invalid_quantity">Invalid quantity</string>
</resources>